<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    >
    <include layout="@layout/layout_common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="11"
        android:orientation="vertical" >

        <com.dev.dongworry.customview.CButton
            android:id="@+id/button_setting_voice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_selector_frame"
            android:drawableRight="@drawable/daren_middle_more"
            android:gravity="left|center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="1px"
            android:paddingTop="1px"
            android:text="@string/title_voice_setting"
            android:textColor="#545454"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_frame_nomal"
            android:divider="@drawable/line"
            android:orientation="vertical"
            android:paddingBottom="1px"
            android:paddingTop="1px"
            android:showDividers="middle" >

            <com.dev.dongworry.customview.CButton
                android:id="@+id/button_setting_setNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/component_in_use"
                android:tag="in_use"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/setNotifications"
                android:textColor="#545454"
                android:textSize="16sp" />
<!--
            <Button
                android:id="@+id/button_setting_showPic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/daren_middle_more"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/showPic"
                android:textColor="#545454"
                android:textSize="16sp" />
                 -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_frame_nomal"
            android:divider="@drawable/line"
            android:orientation="vertical"
            android:paddingBottom="1px"
            android:paddingTop="1px"
            android:showDividers="middle" >

            <com.dev.dongworry.customview.CButton
                android:id="@+id/button_setting_inviteFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/daren_middle_more"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/inviteFriends"
                android:textColor="#545454"
                android:textSize="16sp" />

            <com.dev.dongworry.customview.CButton
                android:id="@+id/button_setting_evaluate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/daren_middle_more"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/evaluate"
                android:textColor="#545454"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_frame_nomal"
            android:divider="@drawable/line"
            android:orientation="vertical"
            android:paddingBottom="1px"
            android:paddingTop="1px"
            android:showDividers="middle" >

            <com.dev.dongworry.customview.CButton
                android:id="@+id/button_setting_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/daren_middle_more"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/title_about"
                android:textColor="#545454"
                android:textSize="16sp" />

            <com.dev.dongworry.customview.CButton
                android:id="@+id/button_setting_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/daren_middle_more"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/update"
                android:textColor="#545454"
                android:textSize="16sp" />
        </LinearLayout>

        <com.dev.dongworry.customview.CButton
            android:id="@+id/button_setting_clearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bg_selector_frame"
            android:text="@string/clearCache"
            android:textColor="#FF1133"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>