<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    >

    <include layout="@layout/layout_common_title" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_weight="11"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="1px"
            android:paddingTop="1px"
            >
            
            <ImageView
            android:id="@+id/imageView_about_logo" 
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            
                />
            
            <TextView
                android:id="@+id/textView_about_version" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView_about_logo" 
                android:text="@string/current_version"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                />

        </RelativeLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/layout_frame_nomal"
            android:divider="@drawable/line"
            android:orientation="vertical"
            android:paddingBottom="1px"
            android:paddingTop="1px"
            android:showDividers="middle" >

            <com.dev.dongworry.customview.CButton
                android:id="@+id/button_about_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/daren_middle_more"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/title_help"
                android:textColor="#545454"
                android:textSize="16sp" />

            <com.dev.dongworry.customview.CButton
                android:id="@+id/button_about_userProtocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/daren_middle_more"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/third_part_sdk"
                android:textColor="#545454"
                android:textSize="16sp" />
            
            <com.dev.dongworry.customview.CButton
                android:id="@+id/button_about_attention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selector"
                android:drawableRight="@drawable/daren_middle_more"
                android:gravity="left|center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/attention"
                android:textColor="#545454"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>