<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout_findpwd_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_common_title"
        android:id="@+id/findpwd_mainLayout"
        />

    <TextView
        android:id="@+id/textView_findpwd_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/findpwd_mainLayout"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="15dp"
        android:text="@string/findPWD_tips"
        android:textColor="#808080"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/linearLayout_findpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_findpwd_tips"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="10dp" >

        <LinearLayout
            android:id="@+id/fragment_findpwd_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            >
        </LinearLayout>
        

        <LinearLayout
            android:id="@+id/linearLayout_findpwd_surePWD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/frame"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <com.dev.dongworry.customview.CustomEditText
                android:id="@+id/editText_surePWD"
                android:focusable="false"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:hint="@string/surePwd"
                android:inputType="textPassword"
                android:background="@drawable/frame"
                android:textSize="15sp"
                android:maxLength="12"
                android:drawableRight="@drawable/submit_edit_clear_pressed"
                android:paddingRight="15dp"  
                android:textCursorDrawable="@null" 
                android:paddingLeft="15dp" />
        </LinearLayout>
        
        <Button
            android:id="@+id/button_findpwd_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_blue_bg"
            android:textColor="#ffffff"
            android:text="@string/next" />
    </LinearLayout>

</RelativeLayout>