<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_common_title"
        android:id="@+id/register_title"
        />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <fragment
            android:id="@+id/fragment_phone"
            android:name="com.dev.dongworry.fragments.PhoneFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/frame" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/frame"
            android:orientation="horizontal" >

         <fragment
            android:id="@+id/fragment_pwd"
            android:name="com.dev.dongworry.fragments.PWDFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame" />
        </LinearLayout>

      <fragment
            android:id="@+id/fragment_vcode"
            android:name="com.dev.dongworry.fragments.VCodeFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/frame" />
    </LinearLayout>

    <Button
        android:id="@+id/button_sureRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_blue_bg"
        android:padding="15dp"
        android:textColor="@drawable/btn_textcolor_selector"
        android:textSize="18sp"
        android:text="@string/sureRegister" />

    <CheckBox
        android:id="@+id/checkBox_userProtocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_sureRegister"
        android:layout_below="@+id/button_sureRegister"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:textColor="#636363"
        android:textSize="15sp"
        android:text="@string/agree" />

    <Button
        android:id="@+id/button_userProtocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_sureRegister"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="3dp"
        android:layout_toRightOf="@+id/checkBox_userProtocol"
        android:background="@null"
        android:gravity="center"
        android:text="@string/userProtocol"
        android:textSize="15sp"
        android:textColor="#636363" />

</RelativeLayout>